// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post component Load normal post 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author1
      </span>
    </div>
    <span
      className="CreatedAt"
    >
      4 days, 6 hours ago
    </span>
  </div>
  <div
    className="Body"
  >
    <img
      className="Thumbnail"
      height={100}
      src="/p1-thumb.jpg"
      width={100}
    />
    <span
      className="Title"
    >
      My new post 1
    </span>
  </div>
  <div
    className="Footer"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "12px",
          "paddingBottom": "1px",
          "paddingTop": "1px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <span
          className="MuiButton-startIcon MuiButton-iconSizeSmall"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
            />
          </svg>
        </span>
        Dismiss Post
      </span>
    </button>
    <span
      className="CommentsNum"
    >
      1,230 comment/s
    </span>
  </div>
</div>
`;

exports[`Post component Load normal post 2 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author1
      </span>
    </div>
    <span
      className="CreatedAt"
    >
      10 days ago
    </span>
  </div>
  <div
    className="Body"
  >
    <img
      className="Thumbnail"
      height={100}
      src="/p2-thumb.jpg"
      width={100}
    />
    <span
      className="Title"
    >
      My new post 2
    </span>
  </div>
  <div
    className="Footer"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "12px",
          "paddingBottom": "1px",
          "paddingTop": "1px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <span
          className="MuiButton-startIcon MuiButton-iconSizeSmall"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
            />
          </svg>
        </span>
        Dismiss Post
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <span
      className="CommentsNum"
    >
      878 comment/s
    </span>
  </div>
</div>
`;

exports[`Post component Load post without picture 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author2
      </span>
    </div>
    <span
      className="CreatedAt"
    >
      2 minutes ago
    </span>
  </div>
  <div
    className="Body"
  >
    <span
      className="Title"
    >
      My new post 3
    </span>
  </div>
  <div
    className="Footer"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "12px",
          "paddingBottom": "1px",
          "paddingTop": "1px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <span
          className="MuiButton-startIcon MuiButton-iconSizeSmall"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
            />
          </svg>
        </span>
        Dismiss Post
      </span>
    </button>
    <span
      className="CommentsNum"
    >
      900 comment/s
    </span>
  </div>
</div>
`;

exports[`Post component Press callbacks 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author3
      </span>
    </div>
    <span
      className="CreatedAt"
    >
      Seconds ago
    </span>
  </div>
  <div
    className="Body"
  >
    <span
      className="Title"
    >
      My new post 4
    </span>
  </div>
  <div
    className="Footer"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "12px",
          "paddingBottom": "1px",
          "paddingTop": "1px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <span
          className="MuiButton-startIcon MuiButton-iconSizeSmall"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
            />
          </svg>
        </span>
        Dismiss Post
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <span
      className="CommentsNum"
    >
      No comments
    </span>
  </div>
</div>
`;
